--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,3 +6,5 @@
 <p>
   Description: <%= @article.description%>
 </p>
+
+ <%= link_to "back to Article page", articles_path%>| <%= link_to "Edit the article", edit_article_path(@article)%>
