--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
 <h1> home</h1>
-<%= link_to "about", about_path %>
+
+<%= link_to "My journey", articles_path%> | <%= link_to "about", about_path %>
