--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+  <%= render 'layouts/navigation'%>
   <%= render 'layouts/messeges'%>
-
-<%= yield %>
-
+  <div class="container">
+  <%= yield %>
+  </div>
+  <%= render 'layouts/footer'%>
 </body>
 </html>
