--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1> home</h1>
-
-<%= link_to "My journey", articles_path%> | <%= link_to "about", about_path %>
+<div class="center jumbotron">
+  <h1>Pranjal's Blog</h1>
+  <%= link_to "sign up", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
