--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,7 @@ $navbar-default-bg: black;
 #logo{
   float: left;
   font-size: 1.7em;
-  color:#fff;
+  color:yellow;
   text-transform:uppercase;
   letter-spacing:-1px;
   font-weight:bold;
@@ -40,6 +40,27 @@ $navbar-default-bg: black;
   font-size:1.7em;
   background-color:black;
 }
+
+.article-actions{
+  border-top:1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description{
+  margin-top:0;
+}
+
+.article-title{
+  font-weight:bold;
+  font-size:1.5em;
+}
+
+.article-body{
+  border-top:1px solid #eaeaea;
+  padding-top:15px;
+  padding-bottom:15px;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
