--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,7 @@
   <nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "create article",new_article_path %></li>
     </ul>
   </nav>
   </footer>
