--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div class="center jumbotron">
   <h1>Pranjal's Blog</h1>
   <%= link_to "sign up", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
+  <%= link_to 'log in', login_path,class: "btn btn-danger btn-lg btn-xlarge" %>
 </div>
