--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,10 @@
            <li class="article-title">
              <%= link_to user.username, user_path(user)%>
              <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+             <% if logged_in? and current_user.admin?%>
+             <li><%= link_to "Delete this user", user_path(user), 
+                 method: :delete, data: {confirm: "are you sure to delete the user and his articles?"}%><li>
+             <% end %>
            </li>
           </div>
         </div>
